<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.personalhealthcare.ui.adminHome.AdminHomeFragment"
        android:label="@string/title_admin_home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.personalhealthcare.ui.food.FoodFragment"
        android:label="@string/title_admin_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_feedback"
        android:name="com.example.personalhealthcare.ui.feedback.FeedbackFragment"
        android:label="@string/title_admin_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/navigation_admin_settings"
        android:name="com.example.personalhealthcare.ui.adminSettings.AdminSettingsFragment"
        android:label="@string/title_admin_settings"
        tools:layout="@layout/fragment_admin_settings" />
</navigation>